--- a/addons/hr/views/hr_job_views.xml
+++ b/addons/hr/views/hr_job_views.xml
@@ -19,7 +19,7 @@
                             </h1>
                         </div>
                         <notebook>
-                            <page string="Details" name="recruitment_page" invisible="1">
+                            <page string="Details" name="recruitment_page" invisible="1" groups="hr.group_hr_user">
                                 <group>
                                     <group name="hiring_process" string="Hiring Process">
                                         <field name="user_id" widget="many2one_avatar_user"/>
@@ -40,7 +40,7 @@
                                     </group>
                                 </group>
                             </page>
-                            <page string="Summary" name="job_description_page" invisible="1">
+                            <page string="Summary" name="job_description_page" invisible="1" groups="hr.group_hr_user">
                                 <field name="description" options="{'collaborative': true}" placeholder="e.g. Summarize the position in one or two lines..."/>
                             </page>
                         </notebook>
@@ -70,7 +70,9 @@
                         <t t-name="card">
                             <field class="fw-bold" name="name"/>
                             <field name="department_id"/>
-                            <span t-if="!selection_mode">Vacancies: <field name="expected_employees"/></span>
+                            <span t-if="!selection_mode" groups="hr.group_hr_user">
+                                Vacancies: <field name="expected_employees"/>
+                            </span>
                         </t>
                     </templates>
                 </kanban>
