--- a/addons/hr_recruitment_skills/views/hr_job_views.xml
+++ b/addons/hr_recruitment_skills/views/hr_job_views.xml
@@ -6,8 +6,21 @@
         <field name="inherit_id" ref="hr_recruitment.hr_job_view_tree_inherit"/>
         <field name="arch" type="xml">
             <field name="department_id" position="after">
-                <field name="applicant_matching_score" widget="progressbar" invisible="not applicant_matching_score" column_invisible="not context.get('active_applicant_id')"/>
+                <field name="applicant_matching_score" widget="progressbar"
+                    groups="hr_recruitment.group_hr_recruitment_interviewer"
+                    invisible="not applicant_matching_score" column_invisible="not context.get('active_applicant_id')"/>
             </field>
+        </field>
+    </record>
+
+    <record id="view_hr_job_form" model="ir.ui.view">
+        <field name="name">hr.job.view.form.inherit.hr.recruitment.skills</field>
+        <field name="model">hr.job</field>
+        <field name="inherit_id" ref="hr_skills.view_hr_job_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//group[@id='job_skills']/field[@name='current_job_skill_ids']" position="attributes">
+                <attribute name="groups">!hr.group_hr_user,!hr_recruitment.group_hr_recruitment_interviewer</attribute>
+            </xpath>
         </field>
     </record>
 
