--- a/addons/l10n_pl/views/account_move_views.xml
+++ b/addons/l10n_pl/views/account_move_views.xml
@@ -5,6 +5,10 @@
         <field name="model">account.move</field>
         <field name="inherit_id" ref="account.view_move_form"/>
         <field name="arch" type="xml">
+            <xpath expr="//group[@id='header_right_group']//field[@name='date']" position="attributes">
+                <attribute name="invisible" add="country_code != 'PL'" separator=" and "/>
+            </xpath>
+            
             <notebook position="inside">
                 <page id="pl_extra" string="PL Extra" name="page_pl_extra" invisible="move_type not in ('out_invoice', 'out_refund') or country_code != 'PL'">
                     <group>
