[IMP] account_payment: get payment providers based on amount to pay

--- a/addons/account_payment/views/account_portal_templates.xml
+++ b/addons/account_payment/views/account_portal_templates.xml
@@ -227,6 +227,7 @@
                                             </t>
                                         </div>
                                     </div>
+                                    <input name="providers_by_amount" type="hidden" t-att-value="json.dumps(providers_by_amount)"/>
                                     <!-- set default amount as the max. amount due, the 'amount'
                                          will be updated/set js-side depending the active tab -->
                                     <t t-call="account_payment.form">
