--- a/addons/website_sale_comparison/views/website_sale_comparison_template.xml
+++ b/addons/website_sale_comparison/views/website_sale_comparison_template.xml
@@ -215,7 +215,7 @@
     <template id="product_compare" name="Comparator Page">
         <t t-call="website.layout">
             <t t-set="additional_title">Shop Comparator</t>
-            <div id="wrap" class="js_sale">
+            <div id="wrap" class="js_sale o_wsale_comparison_page">
                 <div class="oe_structure oe_empty" id="oe_structure_website_sale_comparison_product_compare_1"/>
                 <div t-attf-class="oe_website_sale o_wsale_comparison_page pb-5 #{is_view_active('website_sale.shop_fullwidth') and 'container-fluid' or 'container'}">
                     <h1 class="h4 mt-4 mb-3">Compare Products</h1>
