[FIX] im_livechat: show live chat status icon in discuss sidebar
The livechat status icon was replaced by bg color of matching
live chat status.

While this is great to make discuss sidebar look less crowded, this
solution has the inconvenience to make it hard to spot conversations
with the appropriate live chat status especially for colorblind
users.

This commit adds the live chat status icon back in discuss sidebar,
while preserving the new bg color.

--- a/addons/im_livechat/static/src/core/web/discuss_sidebar_category_patch.scss
+++ b/addons/im_livechat/static/src/core/web/discuss_sidebar_category_patch.scss
@@ -32,3 +32,7 @@
         --border-color: #{rgba($indigo, 0.75)};
     }
 }
+
+.o-livechat-LivechatStatusLabel-icon.o-inDiscussSidebar {
+    background-color: $white;
+}
