[FIX] html_editor: fix history dark mode css
Correct and improve color in dark mode.

task-5058698

Part-of: odoo/odoo#225361
Signed-off-by: Antoine Guenet (age) <age@odoo.com>

--- a/addons/html_editor/static/src/components/history_dialog/history_dialog.scss
+++ b/addons/html_editor/static/src/components/history_dialog/history_dialog.scss
@@ -63,7 +63,6 @@
         .nav {
             padding-left: 24px;
         }
-
         removed {
             display: inline;
             background-color: #f1afaf;
@@ -102,7 +101,7 @@
                 opacity: 0.5;
             }
             &:hover {
-                background-color: rgba($primary, .20);;
+                background-color: rgba($primary, .20);
             }
             &:after {
                 content: ' ';
