[IMP] mail: hover effect messaging menu + mark as read next to badge
Remove bg-inherit technique for im status so that bg hover effect
is available in messaging menu. IM status and thread icon now use
bg-white color around it to compensate.

Mark as read button has improved style contrast and also is shown
next to badge counter rather than in-place of it. That way important
notifications keep their badge on mouse-hover, which is best with
newer style of messaging menu since this is basically the core UI
element to mark a notification as important.

Part-of: odoo/odoo#225145
Related: odoo/enterprise#93729
Signed-off-by: Alexandre Kühn (aku) <aku@odoo.com>

--- a/addons/mail/static/src/core/public_web/notification_item.scss
+++ b/addons/mail/static/src/core/public_web/notification_item.scss
@@ -1,7 +1,6 @@
 .o-mail-NotificationItem {
     outline: 1px solid transparent;
     outline-offset: -1px;
-    background-color: inherit !important;
 
     &:not(.o-interest) {
         --border-opacity: .35;
@@ -53,22 +52,23 @@
 }
 
 .o-mail-NotificationItem-markAsRead {
-    background-color: rgba($success, .15) !important;
+    background-color: transparent !important;
     font-size: 0.85rem !important;
     color: $success !important;
-    outline: 1px solid rgba($success, .25);
+    outline: 1px solid rgba($success, .75);
     outline-offset: -1px;
     padding: map-get($spacers, 1) / 2;
 
     &:hover {
-        outline-color: rgba(darken($success, 10%), .5);
+        outline-color: rgba(darken($success, 10%), 1);
+        color: darken($success, 10%) !important;
         background-color: transparent !important;
         box-shadow: $box-shadow-sm
     }
 }
 
 .o-mail-NotificationItem-text {
-    opacity: .5;
+    opacity: .75;
 
     &:before {
         // invisible character so that typing status bar has constant height, regardless of text content.
