[IMP] mail: improve style of create channel/chat dialog
Part-of: odoo/odoo#225145
Related: odoo/enterprise#93729
Signed-off-by: Alexandre Kühn (aku) <aku@odoo.com>

--- a/addons/mail/static/src/discuss/core/public_web/discuss_command_palette.scss
+++ b/addons/mail/static/src/discuss/core/public_web/discuss_command_palette.scss
@@ -1,3 +1,12 @@
+.o-mail-CreateChannelDialog, .o-mail-CreateChatDialog {
+    .modal-header {
+        border-bottom: 0;
+    }
+    .modal-footer {
+        border-top: 0;
+    }
+}
+
 .o-mail-DiscussCommand {
     padding-top: map-get($spacers, 1);
     padding-bottom: map-get($spacers, 1);
